Add new staff to index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,9 @@
 
             body{
 	            font-family: "Segoe UI";
-                color:#707070;
+                color:#ffffff;
                 margin:20px;
+                background-color: #1f1f1f;
             }
         </style>
     </head>
@@ -30,6 +31,45 @@
                 <div class="col">
                     <h1>Welcome to my web</h1>
                     <p sytle="font-size:15px;">歡迎來到我的首頁</p>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col">
+                    <p></p><p></p>
+                    <div class="card text-white bg-dark mb-3">
+                        <img class="card-img-top" src="static/img/jacobian.png" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title"><a href="./jacobian">我的實作 > 視覺化雅可比 Jacobian Determinant</a></h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text"><small class="text-muted">大一微積分多變數分析</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col">
+                    <p></p><p></p>
+                    <div class="card text-white bg-dark mb-3">
+                        <img class="card-img-top" src="static/img/3dEngine.png" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title"><a href="./3d">我的實作 > 平行投影三維圖像引擎 3D Graphic Engine</a></h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text"><small class="text-muted">大二線性代數</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col">
+                    <p></p><p></p>
+                    <div class="card text-white bg-dark mb-3">
+                        <img class="card-img-top" src="static/img/neuralnetwork.png" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title"><a href="./neuralnetwork">我的實作 > 視覺化神經網路學習 Neural Network</a></h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text"><small class="text-muted">自動微分機</small></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
