--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,9 @@
                 margin:20px;
                 background-color: #1f1f1f;
             }
+            a{
+                color: #ffffff;
+            }
         </style>
     </head>
     <body>
