Add new staff to index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col">
-                    <h1>Welcome to my web</h1>
+                    <h1>NKUST CSIE 王詣承</h1>
                     <p sytle="font-size:15px;">歡迎來到我的首頁</p>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                         <div class="card-body">
                           <h5 class="card-title"><a href="./3d">我的實作 > 平行投影三維圖像引擎 3D Graphic Engine</a></h5>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          <p class="card-text"><small class="text-muted">大二線性代數</small></p>
+                          <p class="card-text"><small class="text-muted">大二線性代數 <a href="https://github.com/Amiannn/3D-Graph-Engine">go to github</a></small></p>
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                         <div class="card-body">
                           <h5 class="card-title"><a href="./neuralnetwork">我的實作 > 視覺化神經網路學習 Neural Network</a></h5>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                          <p class="card-text"><small class="text-muted">自動微分機</small></p>
+                          <p class="card-text"><small class="text-muted">自動微分機 <a href="https://github.com/Amiannn/Neural-Network">go to github</a></small></p>
                         </div>
                     </div>
                 </div>
