Add github link

--- a/templates/neuralnetwork.html
+++ b/templates/neuralnetwork.html
@@ -83,6 +83,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>> 對著畫布點擊滑鼠左鍵及滑鼠滾輪可以新增資料點</p>
+                    <a href="https://github.com/Amiannn/Neural-Network">> github：https://github.com/Amiannn/Neural-Network</a>
                 </div>
             </div>
         </div>
