--- a/templates/physics2d.html
+++ b/templates/physics2d.html
@@ -72,7 +72,7 @@
                     <p></p>
                     <p></p>
                     <p>　　　　　　>點擊滑鼠中鍵可以增加物體，使用滑鼠左鍵點擊物體並拖曳可以改變運動方向!</p>
-                    <p>　　　　　　>github：</p>
+                    <a href="https://github.com/Amiannn/2D-Physics-Engine">　　　　　　>github：https://github.com/Amiannn/2D-Physics-Engine</a>
                 </div>
             </div>
         </div>
