--- a/templates/render3d.html
+++ b/templates/render3d.html
@@ -59,7 +59,7 @@
                     <p></p>
                     <p></p>
                     <p>　　　　　　>使用滑鼠拖拉可以旋轉視角，滑鼠滾輪可以縮放畫面!</p>
-                    <p>　　　　　　>github：https://github.com/Amiannn/3D-Graph-Engine</p>
+                    <a href="https://github.com/Amiannn/3D-Graph-Engine">　　　　　　>github：https://github.com/Amiannn/3D-Graph-Engine</a>
                 </div>
             </div>
         </div>
