Add child book project intro

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,9 +40,29 @@
                 <div class="col">
                     <p></p><p></p>
                     <div class="card text-white bg-dark mb-3">
+                        <img class="card-img-top" src="static/img/childbookocr.png" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title"><a href="http://203.64.95.231:5000/BOOKOCRAPI">專題研究 > 童書注音文本OCR辨識系統</a></h5>
+                          <p class="card-text">
+                            從大三進入系上的智慧系統實驗室後，我專心開發童書注音文本辨識系統，
+                            做此系統的主因是我和教授發現市面上的OCR系統對於含有注音的文本容易誤判，
+                            導致無法順利辨識。國立台灣師範大學教育心理系對於兒童文學、兒童語料有研究的需求，
+                            但缺乏一項能準確辨識的系統，所以在這因緣際會下我們與台師大展開了此項系統的開發及研究。
+                            經過一年的開發與Google Vision AI相比實測後發現，我們系統的精確率(Precision)幾乎高了15個百分點，
+                            召回率(Recall)也非常接近Google，並且字詞錯誤率(Word Error Rate)更是低許多。
+                          </p>
+                          <p class="card-text"><small class="text-muted"></small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col">
+                    <p></p><p></p>
+                    <div class="card text-white bg-dark mb-3">
                         <img class="card-img-top" src="static/img/jacobian.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title"><a href="./jacobian">我的實作 > 視覺化雅可比 Jacobian Determinant</a></h5>
+                          <h5 class="card-title"><a href="./jacobian">日常實作 > 視覺化雅可比 Jacobian Determinant</a></h5>
                           <p class="card-text">
                                 一開始微積分教到多變量分析時我一直對偏微分和梯度很不理解，
                             不理解為什麼一個三維的曲面做偏維之後只要用二維的梯度表示就好，
@@ -64,7 +84,7 @@
                     <div class="card text-white bg-dark mb-3">
                         <img class="card-img-top" src="static/img/physicsengine.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title"><a href="./physics">我的實作 > 二維彈性碰撞物理引擎 2D Physics Engine</a></h5>
+                          <h5 class="card-title"><a href="./physics">日常實作 > 二維彈性碰撞物理引擎 2D Physics Engine</a></h5>
                           <p class="card-text">
                             在大學期間物理課算是我前幾堂喜歡的課，在學到二維彈性碰撞時，我想這應該是時候可以來做看看物理引擎了。
                           </p>
@@ -79,7 +99,7 @@
                     <div class="card text-white bg-dark mb-3">
                         <img class="card-img-top" src="static/img/3dEngine.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title"><a href="./3d">我的實作 > 平行投影三維圖像引擎 3D Graphic Engine</a></h5>
+                          <h5 class="card-title"><a href="./3d">日常實作 > 平行投影三維圖像引擎 3D Graphic Engine</a></h5>
                           <p class="card-text">
                             我從以前就一直對為什麼螢幕能顯示三維的圖像抱持著懷疑的態度，
                             由於那時在研究神經網路而且通常都超過我能想像的維度，
@@ -99,7 +119,7 @@
                     <div class="card text-white bg-dark mb-3">
                         <img class="card-img-top" src="static/img/neuralnetwork.png" alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title"><a href="./neuralnetwork">我的實作 > 視覺化神經網路學習 Neural Network</a></h5>
+                          <h5 class="card-title"><a href="./neuralnetwork">日常實作 > 視覺化神經網路學習 Neural Network</a></h5>
                           <p class="card-text">
                             一開始在接觸神經網路時一直很不理解它到底是在做什麼，
                             經過看了網路上幾個例子後我決定自己也要來做一個視覺化的輔助程式。
